@startuml

hide circle
skinparam linetype ortho

entity "User" as usr {
  * userID: uuid <<PK>>
  --
  * username: text
  * email: text
  first name: text
  last name: text
}

entity "Project" as pro {
  * projectID: uuid <<PK>>
  --
  * name: text
  description: text
}

entity "Event" as evn {
  * eventID: uuid <<PK>>
  --
  * date: date
  * start: time
  * end: time
  description: text
}

entity "User_Project_Event" as usp {
  * userID: uuid <<FK>>
  * projectID: uuid <<FK>>
  * eventID: uuid <<FK>>
  --
}

evn ||-|| usp
usr ||--|{ usp
pro ||--|{ usp

@enduml